--- a/frontend/Makefile
+++ b/frontend/Makefile
@@ -1,11 +1,11 @@
 install:
 	npm ci
 
-build:
-	npm build
-
 start:
 	npm start
+
+build:
+	npm run build
 
 lint:
 	npx eslint --ext js,jsx --no-eslintrc --config .eslintrc.yml .
