--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://0.0.0.0:5001",
+  "engines": {
+    "node": "^19.8.1"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
     "@rollbar/react": "^0.11.2",
