--- a/.github/workflows/nodeci.yml
+++ b/.github/workflows/nodeci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.x]
+        node-version: [16.x, 17.x, 18.x]
 
     steps:
       - uses: actions/checkout@v2
@@ -26,5 +26,3 @@ jobs:
         run: make install
       - name: Run linter
         run: make lint-frontend
-      - name: Run tests
-        run: make test
