--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "proxy": "http://0.0.0.0:5001",
   "engines": {
-    "node": "^20"
+    "node": "v18.17.1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.1.0",
