--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "[![Actions Status](https://github.com/buldogic/frontend-project-12/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/buldogic/frontend-project-12/actions)",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm ci --prefix frontend",
     "build": "npm run build --prefix frontend",
     "start": "start-server -s ./frontend/build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "npm ci --prefix frontend"
   },
   "author": "",
   "license": "ISC",
